--- a/public/404.html
+++ b/public/404.html
@@ -1,67 +1,67 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>The page you were looking for doesn't exist (404)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
-    text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
-  }
+  <head>
+    <title>The page you were looking for doesn't exist (404)</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1" />
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+    />
+    <link rel="stylesheet" href="404.css" />
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+    <style></style>
+  </head>
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #B00100 solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
+  <body>
+    <section>
+      <div class="container d-flex flex-column">
+        <div
+          class="row align-items-center justify-content-center no-gutters min-vh-100"
+        >
+          <div class="col-12 col-md-6 col-lg-4 py-8 py-md-11">
+            <!-- Heading -->
+            <h1 class="display-3 font-weight-bold">
+              Uh Oh.
+            </h1>
 
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #730E15;
-    line-height: 1.5em;
-  }
+            <!-- Text -->
+            <p class="mb-5 text-muted">
+              We ran into an issue, but don’t worry, we’ll take care of it for
+              sure.
+            </p>
 
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
+            <!-- Link -->
+            <a class="btn btn-primary" href="#!">
+              Back to safety
+            </a>
+          </div>
+          <div
+            class="col-lg-7 offset-lg-1 align-self-stretch d-none d-lg-block"
+          >
+            <!-- Image -->
+            <div
+              class="h-100 w-cover bg-cover"
+              style="background-image: url(assets/img/covers/cover-16.jpg);"
+            ></div>
 
-<body class="rails-default-error-page">
-  <!-- This file lives in public/404.html -->
-  <div class="dialog">
-    <div>
-      <h1>The page you were looking for doesn't exist.</h1>
-      <p>You may have mistyped the address or the page may have moved.</p>
-    </div>
-    <p>If you are the application owner check the logs for more information.</p>
-  </div>
-</body>
+            <!-- Shape -->
+            <div class="shape shape-left shape-fluid-y svg-shim text-white">
+              <svg
+                viewBox="0 0 100 1544"
+                fill="none"
+                xmlns="http://www.w3.org/2000/svg"
+              >
+                <path
+                  d="M0 0h100v386l-50 772v386H0V0z"
+                  fill="currentColor"
+                ></path>
+              </svg>
+            </div>
+          </div>
+        </div>
+        <!-- / .row -->
+      </div>
+      <!-- / .container -->
+    </section>
+  </body>
 </html>
