--- a/public/404.html
+++ b/public/404.html
@@ -7,61 +7,39 @@
       rel="stylesheet"
       href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
     />
-    <link rel="stylesheet" href="404.css" />
+    <link rel="stylesheet" href="error.css" />
 
     <style></style>
   </head>
 
   <body>
-    <section>
-      <div class="container d-flex flex-column">
-        <div
-          class="row align-items-center justify-content-center no-gutters min-vh-100"
-        >
-          <div class="col-12 col-md-6 col-lg-4 py-8 py-md-11">
-            <!-- Heading -->
-            <h1 class="display-3 font-weight-bold">
-              Uh Oh.
-            </h1>
+    <div class="container d-flex mr-0 pr-0">
+      <div class="text w-50 d-flex align-items-center">
+        <div class="col-8">
+          <!-- Heading -->
+          <h1 class="display-3 font-weight-bold">
+            404.
+          </h1>
 
-            <!-- Text -->
-            <p class="mb-5 text-muted">
-              We ran into an issue, but don’t worry, we’ll take care of it for
-              sure.
-            </p>
+          <!-- Text -->
+          <p class="mb-5 text-muted">
+            It looks like the page you're looking for doesn't exist.
+          </p>
+          <!-- <p>
+            Please let us know at <a href="">contact@circl.com</a> if this is an
+            error on our side.
+          </p> -->
+          <p>We will take care of it for sure.</p>
 
-            <!-- Link -->
-            <a class="btn btn-primary" href="#!">
-              Back to safety
-            </a>
-          </div>
-          <div
-            class="col-lg-7 offset-lg-1 align-self-stretch d-none d-lg-block"
-          >
-            <!-- Image -->
-            <div
-              class="h-100 w-cover bg-cover"
-              style="background-image: url(assets/img/covers/cover-16.jpg);"
-            ></div>
-
-            <!-- Shape -->
-            <div class="shape shape-left shape-fluid-y svg-shim text-white">
-              <svg
-                viewBox="0 0 100 1544"
-                fill="none"
-                xmlns="http://www.w3.org/2000/svg"
-              >
-                <path
-                  d="M0 0h100v386l-50 772v386H0V0z"
-                  fill="currentColor"
-                ></path>
-              </svg>
-            </div>
-          </div>
+          <!-- Link -->
+          <a class="btn-standard" href="/">
+            Let's go back home.
+          </a>
         </div>
-        <!-- / .row -->
       </div>
-      <!-- / .container -->
-    </section>
+      <!-- Image -->
+      <div></div>
+      <div class="image w-50"></div>
+    </div>
   </body>
 </html>
