html and css for errors 404 and 500 updated

--- a/public/500.html
+++ b/public/500.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>The page you were looking for doesn't exist (404)</title>
+    <title>Ups, error 500.</title>
     <meta name="viewport" content="width=device-width,initial-scale=1" />
     <link
       rel="stylesheet"
@@ -14,7 +14,7 @@
 
   <body>
     <div class="container d-flex mr-0 pr-0">
-F      <div class="text w-50 d-flex align-items-center">
+      <div class="text w-50 d-flex align-items-center">
         <div class="col-8">
           <!-- Heading -->
           <h1 class="display-3 font-weight-bold">
